swagger 문서 정리(미사용 API 정리), Api-Key 수정
