# storage/api-docs/api-docs.json
@@ -25,7 +25,7 @@
                     "- 전체 리스트 요청"
                 ],
                 "summary": "",
-                "description": "전체 리스트 요청, header.X-API-Key에 Api Key 필요",
+                "description": "전체 리스트를 요청한다, header.X-API-Key에 Api Key 필요",
                 "operationId": "4519c82ab6f988d56bb33a3f6c4acb2d",
                 "responses": {
                     "200": {
@@ -81,92 +81,13 @@
                 ]
             }
         },
-        "/list/{id}": {
-            "get": {
-                "tags": [
-                    "- 지정 파츠 요청"
-                ],
-                "summary": "",
-                "description": "지정 파츠 요청, header.X-API-Key에 Api Key 필요",
-                "operationId": "e5372e443cea6e800b17e6f943e3bfa3",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "지정 파츠 id",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        },
-                        "examples": {
-                            "integer": {
-                                "summary": "paramter",
-                                "value": 1
-                            }
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "결과값",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "result_code": {
-                                            "description": "성공:0, 실패:-1",
-                                            "type": "integer",
-                                            "example": "0"
-                                        },
-                                        "result_message": {
-                                            "description": "성공:Success, 실패: 파츠가 존재 하지 않음",
-                                            "type": "string",
-                                            "example": "Success"
-                                        },
-                                        "result_data": {
-                                            "type": "array",
-                                            "items": {
-                                                "properties": {
-                                                    "name": {
-                                                        "description": "이름",
-                                                        "type": "string",
-                                                        "example": "이름 1"
-                                                    },
-                                                    "description": {
-                                                        "description": "설명",
-                                                        "type": "string",
-                                                        "example": "설명 1"
-                                                    },
-                                                    "data_json": {
-                                                        "description": "JSON 문자열",
-                                                        "type": "string",
-                                                        "example": "{}"
-                                                    }
-                                                },
-                                                "type": "object"
-                                            }
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                },
-                "security": [
-                    {
-                        "api-key": []
-                    }
-                ]
-            }
-        },
         "/listByName/{name}": {
             "get": {
                 "tags": [
-                    "- 지정 파츠 요청(name 지정)"
+                    "- 지정 파츠 요청(by name)"
                 ],
                 "summary": "",
-                "description": "지정 파츠 요청, header.X-API-Key에 Api Key 필요",
+                "description": "지정 파츠를 요청 한다, header.X-API-Key에 Api Key 필요",
                 "operationId": "a30f7f66017dd52a34856bd7544d80b9",
                 "parameters": [
                     {
@@ -245,7 +166,7 @@
                     "- 파츠 저장"
                 ],
                 "summary": "",
-                "description": "파츠 저장, 지정 이름, 설명을 json data로 요청하면 저장한다. header.X-API-Key에 Api Key 필요",
+                "description": "파츠를 저장 한다, 지정 이름, 설명을 json data로 요청하면 저장한다. header.X-API-Key에 Api Key 필요",
                 "operationId": "83982f1c8038ef0325623908c7f4c4d6",
                 "requestBody": {
                     "content": {
@@ -273,6 +194,195 @@
                         }
                     }
                 },
+                "responses": {
+                    "200": {
+                        "description": "결과값",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "result_code": {
+                                            "description": "성공:0, 실패:-1",
+                                            "type": "integer",
+                                            "example": "0"
+                                        },
+                                        "result_message": {
+                                            "description": "성공:EMPTY, 실패:에러메세지(데이터 포맷 미 일치",
+                                            "type": "string",
+                                            "example": "Success"
+                                        },
+                                        "result_data": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "id": {
+                                                        "description": "Id",
+                                                        "type": "integer",
+                                                        "example": "Id"
+                                                    },
+                                                    "name": {
+                                                        "description": "이름",
+                                                        "type": "string",
+                                                        "example": "이름 1"
+                                                    },
+                                                    "description": {
+                                                        "description": "설명",
+                                                        "type": "string",
+                                                        "example": "설명 1"
+                                                    },
+                                                    "data_json": {
+                                                        "description": "JSON 문자열",
+                                                        "type": "string",
+                                                        "example": "{}"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "api-key": []
+                    }
+                ]
+            }
+        },
+        "/updateByName/{name}": {
+            "put": {
+                "tags": [
+                    "- 파츠 수정(by name)"
+                ],
+                "summary": "",
+                "description": "지정한 파츠를 수정한다, 지정 이름으로 설명, json data로 요청하면 갱신한다. header.X-API-Key에 Api Key 필요",
+                "operationId": "10f45b05601521cda00d8f305a4b4f94",
+                "parameters": [
+                    {
+                        "name": "name",
+                        "in": "path",
+                        "description": "지정 파츠 이름",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "examples": {
+                            "string": {
+                                "summary": "paramter",
+                                "value": "이름 1"
+                            }
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "description": {
+                                        "description": "설명",
+                                        "type": "string",
+                                        "example": "설명 1"
+                                    },
+                                    "data_json": {
+                                        "description": "{}",
+                                        "type": "string",
+                                        "example": "{}"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "결과값",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "result_code": {
+                                            "description": "성공:0, 실패:-1",
+                                            "type": "integer",
+                                            "example": "0"
+                                        },
+                                        "result_message": {
+                                            "description": "성공:EMPTY, 실패:에러메세지(데이터 포맷 미 일치",
+                                            "type": "string",
+                                            "example": "Success"
+                                        },
+                                        "result_data": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "id": {
+                                                        "description": "Id",
+                                                        "type": "integer",
+                                                        "example": "Id"
+                                                    },
+                                                    "name": {
+                                                        "description": "이름",
+                                                        "type": "string",
+                                                        "example": "이름 1"
+                                                    },
+                                                    "description": {
+                                                        "description": "설명",
+                                                        "type": "string",
+                                                        "example": "설명 1"
+                                                    },
+                                                    "data_json": {
+                                                        "description": "JSON 문자열",
+                                                        "type": "string",
+                                                        "example": "{}"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "api-key": []
+                    }
+                ]
+            }
+        },
+        "/deleteByName/{name}": {
+            "delete": {
+                "tags": [
+                    "- 파츠 삭제(by name)"
+                ],
+                "summary": "",
+                "description": "지정한 파츠를 삭제한다, header.X-API-Key에 Api Key 필요",
+                "operationId": "4b5eae0bfafbcf0dbe4fcdbe7f80392d",
+                "parameters": [
+                    {
+                        "name": "name",
+                        "in": "path",
+                        "description": "지정 파츠 이름",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "examples": {
+                            "string": {
+                                "summary": "paramter",
+                                "value": "이름 1"
+                            }
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "결과값",
